// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleGrid Renders the SimpleGrid UI snapshot correctly 1`] = `
<div
  className="css-bjq6jk"
  data-testid="ds-simpleGrid"
  id="test-grid"
/>
`;

exports[`SimpleGrid Renders the SimpleGrid UI snapshot correctly 2`] = `
<div
  className="css-161u8yz"
  data-testid="ds-simpleGrid"
  id="chakra"
/>
`;

exports[`SimpleGrid Renders the SimpleGrid UI snapshot correctly 3`] = `
<div
  className="css-bjq6jk"
  data-testid="props"
  id="props"
/>
`;
